--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,19 @@ body {
         url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
+    position: relative;
+
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    /* clip-path:  especifica a onde o elemento pode ser visível modificando seu formato, utilizamos 
+    a função "polygon" e definimos as coordenadas que queremos alterar. Um ferramenta web para ajudar "clippy"*/
 }
 
-/* clip-path:  especifica a onde o elemento pode ser visível modificando seu formato, utilizamos 
-a função "polygon" e definimos as coordenadas que queremos alterar. Um ferramenta web para ajudar "clippy"*/
+.logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.logo {
+    height: 35px;
+}
