refactor - add enhancement with inheritance

--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,30 @@ Dark green: #28b485
 
 */
 
-* {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 html {
-    font-size: 10px;
+    font-size: 62.5%;
+    /* 
+        técnica para manter os 10px(62.5% de 16px = 10px) porém sem forçar o tamanho para o usário, assim,
+        quando o usuário aumentar a fonte através do zoom o tamanho base se ajusta 
+    */
 }
 
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    /* font-size: 16px; */
     line-height: 1.7;
     color: #777;
     padding: 3rem;
+
+    box-sizing: border-box;
 }
 
 .header {
