--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
-@import "components/composition.scss";
+@import "components/composition";
 
 @import "layout/header";
 @import "layout/grid";
