--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,4 +13,9 @@
     ),
     url(../img/nat-4.jpg);
   background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem;
+  & > * {
+    transform: skewY(7deg);
+  }
 }
