--- a/css/style.css
+++ b/css/style.css
@@ -210,8 +210,6 @@ body {
   position: relative;
   height: 50rem; }
   .card__side {
-    font-size: 1.6rem;
-    color: #fff;
     height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -235,13 +233,23 @@ body {
   .card__picture {
     background-size: cover;
     height: 23rem;
-    background-blend-mode: screen; }
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
     .card__picture--2 {
       background-image: url(../img/nat-5.jpg); }
     .card__picture--3 {
       background-image: url(../img/nat-5.jpg); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem; }
 
 .header {
   height: 95vh;
