--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -4,9 +4,6 @@
   height: 50rem;
 
   &__side {
-    font-size: 1.6rem;
-    color: $color-white;
-
     height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -48,6 +45,7 @@
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
     &--1 {
       background-image: linear-gradient(
@@ -63,5 +61,16 @@
     &--3 {
       background-image: url(../img/nat-5.jpg);
     }
+  }
+
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
   }
 }
