--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,7 +22,7 @@
     &--back {
       transform: rotateY(180deg);
 
-      &-1 {
+      &--1 {
         background-image: linear-gradient(
           to right bottom,
           $color-secondary-light,
@@ -72,5 +72,18 @@
     position: absolute;
     top: 12rem;
     right: 2rem;
+    width: 75%;
+  }
+
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
+    }
   }
 }
