--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,8 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
-@import "components/card.scss";
+@import "components/card";
+@import "components/story";
 
 @import "layout/header";
 @import "layout/grid";
