--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,8 @@
 @import "components/form";
 
 @import "layout/footer";
-@import "layout/header";
 @import "layout/grid";
+@import "layout/header";
+@import "layout/navigation";
 
 @import "pages/home";
