--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -12,6 +12,7 @@
     right: 6rem;
     border-radius: 50%;
     z-index: 100;
+    box-shadow: 0 1rem 3rem rgba($color-black, $alpha: 0.1);
   }
 
   &__background {
@@ -26,17 +27,19 @@
       $color-primary-dark
     );
     z-index: 80;
-
-    transform: scale(80);
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   }
 
   &__nav {
     height: 100vh;
-    width: 100%;
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
     z-index: 90;
+    opacity: 0;
+    width: 0;
+    visibility: hidden;
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
   &__list {
@@ -46,6 +49,7 @@
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
+    width: 100%;
   }
 
   &__item {
@@ -83,5 +87,15 @@
       color: $color-primary;
       transform: translateX(1rem);
     }
+  }
+
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    visibility: visible;
+    opacity: 1;
+    width: 100%;
   }
 }
