--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,8 @@
     border-radius: 50%;
     z-index: 100;
     box-shadow: 0 1rem 3rem rgba($color-black, $alpha: 0.1);
+    text-align: center;
+    cursor: pointer;
   }
 
   &__background {
@@ -89,6 +91,7 @@
     }
   }
 
+  //FUNCTIONALITY
   &__checkbox:checked ~ &__background {
     transform: scale(80);
   }
@@ -97,5 +100,57 @@
     visibility: visible;
     opacity: 1;
     width: 100%;
+  }
+
+  //ICON
+  &__icon {
+    position: relative;
+    margin-top: 3.4rem;
+
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.2s ease;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__btn:hover &__icon::before {
+    top: -0.9rem;
+  }
+
+  &__btn:hover &__icon::after {
+    top: 0.9rem;
+  }
+
+  &__checkbox:checked + &__btn &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__btn &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  &__checkbox:checked + &__btn &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
