--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -16,23 +16,23 @@
 // 1em = 16px
 // using em because it will adopt to browser font size set
 
-@mixin respond($breakpoint) {
-  @if $breakpoint == phone {
+@mixin customMedia($breakpoint) {
+  @if $breakpoint == sm {
     @media only screen and (max-width: 37.5em) {
       @content;
     } // 600px
   }
-  @if $breakpoint == tab-port {
+  @if $breakpoint == md {
     @media only screen and (max-width: 56.25em) {
       @content;
     } // 900px 56.25em
   }
-  @if $breakpoint == tab-land {
+  @if $breakpoint == lg {
     @media only screen and (max-width: 75em) {
       @content;
     } // 1200px
   }
-  @if $breakpoint == big-desktop {
+  @if $breakpoint == xl {
     @media only screen and (min-width: 112.5em) {
       @content;
     } // 1800px
