--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,12 +1,31 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 html {
-    // this defines what 1rem is
-    font-size: 62.5%; // 62.5% of 16px = 10px
+  // this defines what 1rem is
+  font-size: 62.5%; // 62.5% of 16px = 10px
+
+  @include customMedia(lg) {
+    font-size: 56.25%;
+  }
+  @include customMedia(md) {
+    font-size: 50%;
+  }
+  @include customMedia(xl) {
+    font-size: 75%;
+  }
+}
+
+body {
+  padding: 3rem;
+  box-sizing: border-box;
+
+  @include customMedia(md) {
+    padding: 0;
+  }
 }
