--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,8 +3,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
-  box-sizing: border-box;
 }
 
 .heading-primary {
@@ -19,6 +17,11 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out 0.5s;
+
+    @include customMedia(sm) {
+      font-size: 5rem;
+      letter-spacing: 1rem;
+    }
   }
 
   &--sub {
@@ -27,6 +30,10 @@ body {
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRigth 1s ease-out 0.5s;
+
+    @include customMedia(sm) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -45,6 +52,14 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.3s;
+
+  @include customMedia(md) {
+    font-size: 3rem;
+  }
+
+  @include customMedia(sm) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
