--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,6 +15,11 @@
     box-shadow: 0 1rem 3rem rgba($color-black, $alpha: 0.1);
     text-align: center;
     cursor: pointer;
+
+    @include customMedia(md) {
+      top: 3rem;
+      right: 3rem;
+    }
   }
 
   &__background {
@@ -30,6 +35,11 @@
     );
     z-index: 80;
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include customMedia(md) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
   }
 
   &__nav {
