--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,9 +7,15 @@
 }
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
+  @include customMedia(md) {
+    margin-bottom: 3rem !important;
+  }
 }
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
+  @include customMedia(md) {
+    margin-bottom: 5rem !important;
+  }
 }
 
 .u-margin-top-big {
