--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include customMedia(md) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -15,8 +19,13 @@
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem;
+
   & > * {
     transform: skewY(7deg);
+  }
+
+  @include customMedia(md) {
+    padding: 10rem 0;
   }
 }
 
@@ -24,11 +33,19 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem;
   margin-top: -10rem;
+
+  @include customMedia(md) {
+    padding: 20rem 0 10rem;
+  }
 }
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
+
+  @include customMedia(md) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
@@ -38,6 +55,10 @@
     $color-primary-light,
     $color-primary-dark
   );
+
+  @include customMedia(md) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
