feat: create compile css

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -170,7 +170,8 @@
   }
 
   // MEDIA QUERY ----------------
-  @include customMedia(md) {
+  // @include customMedia(md) {
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     height: auto;
     border-radius: 3px;
     background-color: $color-white;
