--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,12 +11,12 @@
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
-  @media (min-resolution: 192dpi) {
+  @media only screen and (min-resolution: 192dpi) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)
-      ),
+      )
       url(../img/hero.jpg);
   }
 
