--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -31,11 +31,40 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.4s 0.2s;
+
+    @include customMedia(md) {
+      display: flex;
+      align-items: center;
+      padding-left: 2rem;
+    }
+
+    @include customMedia(sm) {
+      flex-direction: column;
+      padding-left: 0;
+      overflow-y: scroll;
+
+      position: inherit;
+      top: auto;
+      left: auto;
+      transform: none;
+
+      width: 100%;
+      height: 100%;
+      box-shadow: none;
+      border-radius: none;
+    }
   }
 
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include customMedia(sm) {
+      display: flex;
+      width: 100%;
+      height: 200px;
+      margin-top: 8rem;
+    }
   }
 
   &__right {
@@ -43,11 +72,26 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include customMedia(sm) {
+      width: 100%;
+      padding: 3rem;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include customMedia(sm) {
+      object-fit: cover;
+    }
+
+    &-2 {
+      @include customMedia(sm) {
+        display: none;
+      }
+    }
   }
 
   &__text {
@@ -72,6 +116,10 @@
   &:target &__content {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
+
+    @include customMedia(sm) {
+      transform: none;
+    }
   }
 
   &__close {
