--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -515,7 +515,9 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 2px;
-  transition: all 0.3s; }
+  transition: all 0.3s;
+  padding-left: 1rem;
+  padding-right: 1rem; }
   @media only screen and (max-width: 56.25em) {
     .heading-secondary {
       font-size: 3rem; } }
@@ -1036,17 +1038,51 @@ body {
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.4s 0.2s; }
+    @media only screen and (max-width: 56.25em) {
+      .popup__content {
+        display: flex;
+        align-items: center;
+        padding-left: 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .popup__content {
+        flex-direction: column;
+        padding-left: 0;
+        overflow-y: scroll;
+        position: inherit;
+        top: auto;
+        left: auto;
+        transform: none;
+        width: 100%;
+        height: 100%;
+        box-shadow: none;
+        border-radius: none; } }
   .popup__left {
     width: 33.333333%;
     display: table-cell; }
+    @media only screen and (max-width: 37.5em) {
+      .popup__left {
+        display: flex;
+        width: 100%;
+        height: 200px;
+        margin-top: 8rem; } }
   .popup__right {
     width: 66.666667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media only screen and (max-width: 37.5em) {
+      .popup__right {
+        width: 100%;
+        padding: 3rem; } }
   .popup__img {
     display: block;
     width: 100%; }
+    @media only screen and (max-width: 37.5em) {
+      .popup__img {
+        object-fit: cover; } }
+    @media only screen and (max-width: 37.5em) {
+      .popup__img-2 {
+        display: none; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -1063,6 +1099,9 @@ body {
   .popup:target .popup__content {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1); }
+    @media only screen and (max-width: 37.5em) {
+      .popup:target .popup__content {
+        transform: none; } }
   .popup__close:link, .popup__close:visited {
     color: #777;
     position: absolute;
@@ -1161,13 +1200,13 @@ body {
   .row .col-1-of-3 {
     width: calc((100% - 6rem* 2) / 3); }
   .row .col-2-of-3 {
-    width: calc( ((100% - 6rem* 2) / 3) * 2 + 6rem); }
+    width: calc( ((100% - 6rem* 2) / 3) * 2 + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - 6rem* 3) / 4); }
   .row .col-2-of-4 {
-    width: calc( ((100% - 6rem* 3) / 4) * 2 + 6rem); }
+    width: calc( ((100% - 6rem* 3) / 4) * 2 + 6rem); }
   .row .col-3-of-4 {
-    width: calc( ((100% - 6rem* 3) / 4) * 3 + 6rem* 2); }
+    width: calc( ((100% - 6rem* 3) / 4) * 3 + 6rem* 2); }
 
 .header {
   height: 95vh;
