--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -52,6 +52,8 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.3s;
+  padding-left: 1rem;
+  padding-right: 1rem;
 
   @include customMedia(md) {
     font-size: 3rem;
